--- a/devel/help/seqClose.html
+++ b/devel/help/seqClose.html
@@ -9,13 +9,15 @@
 
 <h3>Description</h3>
 
-<p>Closes a sequence GDS file.
+<p>Closes a SeqArray GDS file which is open.
 </p>
 
 
 <h3>Usage</h3>
 
 <pre>
+## S4 method for signature 'gds.class'
+seqClose(object)
 ## S4 method for signature 'SeqVarGDSClass'
 seqClose(object)
 </pre>
@@ -37,6 +39,9 @@ seqClose(object)
 </p>
 
 <ul>
+<li><p><code><a href="../../gdsfmt/html/gds.class.html">gds.class</a></code>, close a general GDS file
+</p>
+</li>
 <li><p><code><a href="SeqVarGDSClass-class.html">SeqVarGDSClass</a></code>, close the sequence GDS file.
 </p>
 </li></ul>
@@ -59,5 +64,5 @@ seqClose(object)
 <p><code><a href="seqOpen.html">seqOpen</a></code>
 </p>
 
-<hr /><div style="text-align: center;">[Package <em>SeqArray</em> version 1.9.13 <a href="00Index.html">Index</a>]</div>
+<hr /><div style="text-align: center;">[Package <em>SeqArray</em> version 1.13.0 <a href="00Index.html">Index</a>]</div>
 </body></html>
