--- a/devel/help/seqOptimize.html
+++ b/devel/help/seqOptimize.html
@@ -52,7 +52,7 @@ or <code>TRUE</code> for all variables, according to &quot;annotation/format&quo
 <h3>Details</h3>
 
 <p>Warning: optimizing GDS file for reading data by sample may increase file
-size by up to 2X as genotype data and all format data is duplicated.
+size by up to 2X as genotype data and all format data are duplicated.
 </p>
 
 
@@ -97,5 +97,5 @@ seqClose(f)
 unlink("tmp.gds")
 </pre>
 
-<hr /><div style="text-align: center;">[Package <em>SeqArray</em> version 1.9.13 <a href="00Index.html">Index</a>]</div>
+<hr /><div style="text-align: center;">[Package <em>SeqArray</em> version 1.13.0 <a href="00Index.html">Index</a>]</div>
 </body></html>
