--- a/devel/help/00Index.html
+++ b/devel/help/00Index.html
@@ -1,47 +1,64 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
-<head><title>R: Big Data Management of Genome-Wide Sequencing Variants</title>
+<head><title>R: Big Data Management of Whole-genome Sequence Variant Calls</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <link rel="stylesheet" type="text/css" href="R.css" />
 </head><body>
-<h1> Big Data Management of Genome-Wide Sequencing Variants
-</h1>
+<h1> Big Data Management of Whole-genome Sequence Variant Calls </h1>
 <hr/>
-<h2>Documentation for package &lsquo;SeqArray&rsquo; version 1.9.13</h2>
+<div style="text-align: center;">
+</div><h2>Documentation for package &lsquo;SeqArray&rsquo; version 1.13.0</h2>
+
 <h2>Help Pages</h2>
 
 
 <table width="100%">
 <tr><td style="width: 25%;"><a href="SeqArray-package.html">SeqArray-package</a></td>
-<td>Big Data Management of Genome-wide Sequencing Variants</td></tr>
+<td>Big Data Management of Genome-wide Sequence Variants</td></tr>
 <tr><td style="width: 25%;"><a href="SeqVarGDSClass-class.html">alt-method</a></td>
 <td>SeqVarGDSClass</td></tr>
 <tr><td style="width: 25%;"><a href="SeqVarGDSClass-class.html">asVCF-method</a></td>
 <td>SeqVarGDSClass</td></tr>
+<tr><td style="width: 25%;"><a href="SeqVarGDSClass-class.html">colData-method</a></td>
+<td>SeqVarGDSClass</td></tr>
 <tr><td style="width: 25%;"><a href="SeqVarGDSClass-class.html">filt-method</a></td>
 <td>SeqVarGDSClass</td></tr>
+<tr><td style="width: 25%;"><a href="SeqVarGDSClass-class.html">fixed-method</a></td>
+<td>SeqVarGDSClass</td></tr>
+<tr><td style="width: 25%;"><a href="SeqVarGDSClass-class.html">geno-method</a></td>
+<td>SeqVarGDSClass</td></tr>
 <tr><td style="width: 25%;"><a href="SeqVarGDSClass-class.html">granges-method</a></td>
+<td>SeqVarGDSClass</td></tr>
+<tr><td style="width: 25%;"><a href="SeqVarGDSClass-class.html">header-method</a></td>
+<td>SeqVarGDSClass</td></tr>
+<tr><td style="width: 25%;"><a href="SeqVarGDSClass-class.html">info-method</a></td>
 <td>SeqVarGDSClass</td></tr>
 <tr><td style="width: 25%;"><a href="SeqVarGDSClass-class.html">qual-method</a></td>
 <td>SeqVarGDSClass</td></tr>
 <tr><td style="width: 25%;"><a href="SeqVarGDSClass-class.html">ref-method</a></td>
 <td>SeqVarGDSClass</td></tr>
+<tr><td style="width: 25%;"><a href="SeqVarGDSClass-class.html">rowRanges-method</a></td>
+<td>SeqVarGDSClass</td></tr>
+<tr><td style="width: 25%;"><a href="seqAlleleCount.html">seqAlleleCount</a></td>
+<td>Get Allele Counts</td></tr>
 <tr><td style="width: 25%;"><a href="seqAlleleFreq.html">seqAlleleFreq</a></td>
 <td>Get Allele Frequencies</td></tr>
 <tr><td style="width: 25%;"><a href="seqApply.html">seqApply</a></td>
 <td>Apply Functions Over Array Margins</td></tr>
 <tr><td style="width: 25%;"><a href="SeqArray-package.html">SeqArray</a></td>
-<td>Big Data Management of Genome-wide Sequencing Variants</td></tr>
-<tr><td style="width: 25%;"><a href="seqClose-methods.html">seqClose</a></td>
+<td>Big Data Management of Genome-wide Sequence Variants</td></tr>
+<tr><td style="width: 25%;"><a href="seqBED2GDS.html">seqBED2GDS</a></td>
+<td>Convert PLINK BED Format to SeqArray Format</td></tr>
+<tr><td style="width: 25%;"><a href="seqClose.html">seqClose</a></td>
 <td>Close the SeqArray GDS File</td></tr>
-<tr><td style="width: 25%;"><a href="seqClose-methods.html">seqClose-method</a></td>
+<tr><td style="width: 25%;"><a href="seqClose.html">seqClose-method</a></td>
 <td>Close the SeqArray GDS File</td></tr>
-<tr><td style="width: 25%;"><a href="seqCompress.Option.html">seqCompress.Option</a></td>
-<td>Compression Options for Importing VCF File(s)</td></tr>
 <tr><td style="width: 25%;"><a href="seqDelete.html">seqDelete</a></td>
 <td>Delete GDS Variables</td></tr>
+<tr><td style="width: 25%;"><a href="seqDigest.html">seqDigest</a></td>
+<td>Hash function digests</td></tr>
 <tr><td style="width: 25%;"><a href="seqExampleFileName.html">seqExampleFileName</a></td>
-<td>Example GDS file</td></tr>
+<td>Example files</td></tr>
 <tr><td style="width: 25%;"><a href="seqExport.html">seqExport</a></td>
 <td>Export to a GDS File</td></tr>
 <tr><td style="width: 25%;"><a href="seqGDS2SNP.html">seqGDS2SNP</a></td>
@@ -52,41 +69,49 @@
 <td>Get Data</td></tr>
 <tr><td style="width: 25%;"><a href="seqGetFilter.html">seqGetFilter</a></td>
 <td>Get the Filter of GDS File</td></tr>
-<tr><td style="width: 25%;"><a href="seqInfoNewVar.html">seqInfoNewVar</a></td>
-<td>Add a Variable to the INFO Field</td></tr>
 <tr><td style="width: 25%;"><a href="seqMerge.html">seqMerge</a></td>
-<td>Merge Multiple Sequence GDS Files</td></tr>
+<td>Merge Multiple SeqArray GDS Files</td></tr>
 <tr><td style="width: 25%;"><a href="seqMissing.html">seqMissing</a></td>
 <td>Missing genotype percentage</td></tr>
 <tr><td style="width: 25%;"><a href="seqNumAllele.html">seqNumAllele</a></td>
 <td>Number of alleles</td></tr>
 <tr><td style="width: 25%;"><a href="seqOpen.html">seqOpen</a></td>
-<td>Open a Sequence GDS File</td></tr>
+<td>Open a SeqArray GDS File</td></tr>
 <tr><td style="width: 25%;"><a href="seqOptimize.html">seqOptimize</a></td>
 <td>Optimize the Storage of Data Array</td></tr>
 <tr><td style="width: 25%;"><a href="seqParallel.html">seqParallel</a></td>
 <td>Apply Functions in Parallel</td></tr>
 <tr><td style="width: 25%;"><a href="seqParallelSetup.html">seqParallelSetup</a></td>
 <td>Setup a Parallel Environment</td></tr>
+<tr><td style="width: 25%;"><a href="seqParallel.html">seqParApply</a></td>
+<td>Apply Functions in Parallel</td></tr>
+<tr><td style="width: 25%;"><a href="seqSetFilter.html">seqResetFilter</a></td>
+<td>Set a Filter to Sample or Variant</td></tr>
 <tr><td style="width: 25%;"><a href="seqSetFilter.html">seqSetFilter</a></td>
+<td>Set a Filter to Sample or Variant</td></tr>
+<tr><td style="width: 25%;"><a href="seqSetFilter.html">seqSetFilter-method</a></td>
 <td>Set a Filter to Sample or Variant</td></tr>
 <tr><td style="width: 25%;"><a href="seqSetFilterChrom.html">seqSetFilterChrom</a></td>
 <td>Chromosome Selection</td></tr>
-<tr><td style="width: 25%;"><a href="seqSlidingWindow.html">seqSlidingWindow</a></td>
-<td>Apply Functions via a Sliding Window Over Variants</td></tr>
+<tr><td style="width: 25%;"><a href="seqSNP2GDS.html">seqSNP2GDS</a></td>
+<td>Convert SNPRelate Format to SeqArray Format</td></tr>
+<tr><td style="width: 25%;"><a href="seqStorageOption.html">seqStorageOption</a></td>
+<td>Storage and Compression Options</td></tr>
 <tr><td style="width: 25%;"><a href="seqSummary.html">seqSummary</a></td>
-<td>Summarize the Sequence GDS File</td></tr>
+<td>Summarize a SeqArray GDS File</td></tr>
+<tr><td style="width: 25%;"><a href="seqSystem.html">seqSystem</a></td>
+<td>Get the parameters in the GDS system</td></tr>
 <tr><td style="width: 25%;"><a href="seqTranspose.html">seqTranspose</a></td>
 <td>Transpose Data Array</td></tr>
 <tr><td style="width: 25%;"><a href="SeqVarGDSClass-class.html">SeqVarGDSClass</a></td>
 <td>SeqVarGDSClass</td></tr>
 <tr><td style="width: 25%;"><a href="SeqVarGDSClass-class.html">SeqVarGDSClass-class</a></td>
 <td>SeqVarGDSClass</td></tr>
-<tr><td style="width: 25%;"><a href="seqVCF.Header.html">seqVCF.Header</a></td>
-<td>Parse the Header of a VCF File</td></tr>
-<tr><td style="width: 25%;"><a href="seqVCF.SampID.html">seqVCF.SampID</a></td>
-<td>Get the Sample IDs</td></tr>
 <tr><td style="width: 25%;"><a href="seqVCF2GDS.html">seqVCF2GDS</a></td>
 <td>Reformat VCF Files</td></tr>
+<tr><td style="width: 25%;"><a href="seqVCF_Header.html">seqVCF_Header</a></td>
+<td>Parse the Header of a VCF File</td></tr>
+<tr><td style="width: 25%;"><a href="seqVCF_SampID.html">seqVCF_SampID</a></td>
+<td>Get the Sample IDs</td></tr>
 </table>
 </body></html>
