--- a/devel/help/SeqArray-package.html
+++ b/devel/help/SeqArray-package.html
@@ -1,15 +1,15 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head><title>R: Big Data Management of Genome-wide Sequencing Variants</title>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head><title>R: Big Data Management of Genome-wide Sequence Variants</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <link rel="stylesheet" type="text/css" href="R.css" />
 </head><body>
 
 <table width="100%" summary="page for SeqArray-package {SeqArray}"><tr><td>SeqArray-package {SeqArray}</td><td style="text-align: right;">R Documentation</td></tr></table>
 
-<h2>Big Data Management of Genome-wide Sequencing Variants</h2>
+<h2>Big Data Management of Genome-wide Sequence Variants</h2>
 
 <h3>Description</h3>
 
-<p>Big-data management of genome-wide sequencing variants.
+<p>Big-data management of genome-wide sequence variants.
 </p>
 
 
@@ -30,11 +30,11 @@ storing DNA polymorphism data such as SNPs, insertions, deletions and
 structural variants, together with rich annotations. However, this format is
 less efficient for large-scale analyses since numeric data have to be parsed
 from a text VCF file before further analyses. The computational burden
-associated with sequencing variants is especially evident with large sample
+associated with sequence variants is especially evident with large sample
 and variant sizes, and it requires efficient numerical implementation and
 data management.
 </p>
-<p>Here I introduce a high-performance C/C++ computing library CoreArray
+<p>Here I introduce a high-performance C++ computing library CoreArray
 (<a href="http://corearray.sourceforge.net">http://corearray.sourceforge.net</a>) for big-data management of genome-wide
 variants. CoreArray was designed for developing portable and scalable storage
 technologies for bioinformatics data, allowing parallel computing at the
@@ -45,10 +45,10 @@ to store multiple extensible data variables in the GDS format, and all datasets
 are stored in a single file with chunked storage layout. Here, I focus on the
 application of CoreArray for statisticians working in the R environment, and
 developed an R/Bioconductor package SeqArray to address or reduce the
-computational burden associated with data management of sequencing variants.
-The kernels of SeqArray are written in C/C++ and highly optimized. Genotypic
+computational burden associated with data management of sequence variants.
+The kernels of SeqArray are written in C++ and highly optimized. Genotypic
 data and annotations are stored in an array-oriented manner, offering efficient
-access of genetic variants using the R language. There are five key functions
+data access using the R language. There are five key functions
 in SeqArray, and most of data analyses could be done using these 6 functions:
 </p>
 
@@ -63,8 +63,8 @@ in SeqArray, and most of data analyses could be done using these 6 functions:
 </tr>
 <tr>
  <td style="text-align: left;">
-    seqSummary </td><td style="text-align: left;"> Gets the summary of a sequence GDS file (# of samples,
-        # of variants, INFO/FORMAT variables, etc) </td>
+    seqSummary </td><td style="text-align: left;"> Gets the summary (# of samples, # of variants,
+        INFO/FORMAT variables, etc) </td>
 </tr>
 <tr>
  <td style="text-align: left;">
@@ -73,8 +73,7 @@ in SeqArray, and most of data analyses could be done using these 6 functions:
 </tr>
 <tr>
  <td style="text-align: left;">
-    seqGetData </td><td style="text-align: left;"> Gets data from a sequence GDS file (from a subset
-        of data) </td>
+    seqGetData </td><td style="text-align: left;"> Gets data from a GDS file (from a subset of data) </td>
 </tr>
 <tr>
  <td style="text-align: left;">
@@ -102,10 +101,8 @@ rare variants.
 large-scale genomic sequencing data using R environment, particularly those
 with limited experience of low-level C programming and parallel computing.
 </p>
-<p>Webpage: <a href="http://corearray.sourceforge.net/">http://corearray.sourceforge.net/</a>,
-<a href="http://github.com/zhengxwen/SeqArray">http://github.com/zhengxwen/SeqArray</a>
-</p>
-<p>Tutorial: <a href="http://corearray.sourceforge.net/tutorials/SeqArray/">http://corearray.sourceforge.net/tutorials/SeqArray/</a>
+<p>Webpage: <a href="http://github.com/zhengxwen/SeqArray">http://github.com/zhengxwen/SeqArray</a>,
+<a href="http://www.bioconductor.org/packages/SeqArray/">http://www.bioconductor.org/packages/SeqArray/</a>
 </p>
 
 
@@ -123,10 +120,10 @@ vcf.fn
 # or vcf.fn &lt;- "C:/YourFolder/Your_VCF_File.vcf"
 
 # parse the header
-seqVCF.Header(vcf.fn)
+seqVCF_Header(vcf.fn)
 
 # get sample id
-seqVCF.SampID(vcf.fn)
+seqVCF_SampID(vcf.fn)
 
 # convert
 seqVCF2GDS(vcf.fn, "tmp.gds")
@@ -203,39 +200,19 @@ seqApply(f, "allele",
 ################################################################
 
 # remove the sample and variant filters
-seqSetFilter(f)
+seqResetFilter(f)
 
 # calculate the frequency of reference allele,
 #   a faster version could be obtained by C coding
-af &lt;- seqApply(f, "genotype", FUN=function(x) mean(x==0, na.rm=TRUE), as.is="double")
+af &lt;- seqApply(f, "genotype", FUN=function(x) mean(x==0, na.rm=TRUE),
+    as.is="double")
 length(af)
 summary(af)
-
-
-################################################################
-# run in parallel
-
-library(parallel)
-
-# Use option cl.core to choose an appropriate cluster size or number of cores
-cl &lt;- makeCluster(getOption("cl.cores", 2))
-
-# run in parallel
-afreq &lt;- seqParallel(cl, f, FUN = function(gdsfile) {
-        seqApply(gdsfile, "genotype", as.is="double",
-            FUN=function(x) mean(x==0, na.rm=TRUE))
-    }, split = "by.variant")
-
-length(afreq)
-summary(afreq)
-
-
-stopCluster(cl)
 
 
 # close the GDS file
 seqClose(f)
 </pre>
 
-<hr /><div style="text-align: center;">[Package <em>SeqArray</em> version 1.9.13 <a href="00Index.html">Index</a>]</div>
+<hr /><div style="text-align: center;">[Package <em>SeqArray</em> version 1.13.0 <a href="00Index.html">Index</a>]</div>
 </body></html>
