--- a/devel/help/seqExampleFileName.html
+++ b/devel/help/seqExampleFileName.html
@@ -1,15 +1,15 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head><title>R: Example GDS file</title>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head><title>R: Example files</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <link rel="stylesheet" type="text/css" href="R.css" />
 </head><body>
 
 <table width="100%" summary="page for seqExampleFileName {SeqArray}"><tr><td>seqExampleFileName {SeqArray}</td><td style="text-align: right;">R Documentation</td></tr></table>
 
-<h2>Example GDS file</h2>
+<h2>Example files</h2>
 
 <h3>Description</h3>
 
-<p>The example GDS file(s) for sequencing variants.
+<p>The example files of VCF and GDS format.
 </p>
 
 
@@ -32,8 +32,8 @@ seqExampleFileName(type=c("gds", "vcf", "KG_Phase1"))
 
 <h3>Details</h3>
 
-<p>A GDS sequencing-variant file was created from a subset of VCF data of
-the 1000 Genomes Project.
+<p>The SeqArray GDS file was created from a subset of VCF data of the 1000
+Genomes Phase 1 Project.
 </p>
 
 
@@ -59,5 +59,5 @@ seqExampleFileName("vcf")
 seqExampleFileName("KG_Phase1")
 </pre>
 
-<hr /><div style="text-align: center;">[Package <em>SeqArray</em> version 1.9.13 <a href="00Index.html">Index</a>]</div>
+<hr /><div style="text-align: center;">[Package <em>SeqArray</em> version 1.13.0 <a href="00Index.html">Index</a>]</div>
 </body></html>
