--- a/devel/help/seqSetFilter.html
+++ b/devel/help/seqSetFilter.html
@@ -3,7 +3,7 @@
 <link rel="stylesheet" type="text/css" href="R.css" />
 </head><body>
 
-<table width="100%" summary="page for seqSetFilter {SeqArray}"><tr><td>seqSetFilter {SeqArray}</td><td style="text-align: right;">R Documentation</td></tr></table>
+<table width="100%" summary="page for seqSetFilter-methods {SeqArray}"><tr><td>seqSetFilter-methods {SeqArray}</td><td style="text-align: right;">R Documentation</td></tr></table>
 
 <h2>Set a Filter to Sample or Variant</h2>
 
@@ -16,35 +16,56 @@
 <h3>Usage</h3>
 
 <pre>
-seqSetFilter(gdsfile, sample.id=NULL, variant.id=NULL,
-    samp.sel=NULL, variant.sel=NULL,
+## S4 method for signature 'SeqVarGDSClass,ANY'
+seqSetFilter(object, variant.sel,
+    sample.sel=NULL, variant.id=NULL, sample.id=NULL, samp.sel=NULL,
     action=c("set", "intersect", "push", "push+set", "push+intersect", "pop"),
     verbose=TRUE)
+## S4 method for signature 'SeqVarGDSClass,GRanges'
+seqSetFilter(object, variant.sel,
+    rm.txt="chr", verbose=TRUE)
+## S4 method for signature 'SeqVarGDSClass,GRangesList'
+seqSetFilter(object, variant.sel,
+    rm.txt="chr", verbose=TRUE)
+## S4 method for signature 'SeqVarGDSClass,IRanges'
+seqSetFilter(object, variant.sel,
+    chr, verbose=TRUE)
+seqResetFilter(object, sample=TRUE, variant=TRUE, verbose=TRUE)
 </pre>
 
 
 <h3>Arguments</h3>
 
 <table summary="R argblock">
-<tr valign="top"><td><code>gdsfile</code></td>
+<tr valign="top"><td><code>object</code></td>
 <td>
 <p>a <code><a href="SeqVarGDSClass-class.html">SeqVarGDSClass</a></code> object</p>
 </td></tr>
-<tr valign="top"><td><code>sample.id</code></td>
+<tr valign="top"><td><code>variant.sel</code></td>
 <td>
-<p>IDs of selected samples</p>
+<p>a logical/raw/index vector indicating the selected
+variants; <code><a href="../../GenomicRanges/html/GRanges-class.html">GRanges</a></code>, a GRanges object for the genomic
+locations; <code><a href="../../GenomicRanges/html/GRangesList-class.html">GRangesList</a></code>, a GRangesList object for storing
+a collection of GRanges objects; <code><a href="../../IRanges/html/IRanges-constructor.html">IRanges</a></code>, a IRanges
+object for storing a collection of range objects</p>
+</td></tr>
+<tr valign="top"><td><code>sample.sel</code></td>
+<td>
+<p>a logical/raw/index vector indicating the selected
+samples</p>
 </td></tr>
 <tr valign="top"><td><code>variant.id</code></td>
 <td>
-<p>IDs of selected variants</p>
+<p>ID of selected variants</p>
+</td></tr>
+<tr valign="top"><td><code>sample.id</code></td>
+<td>
+<p>ID of selected samples</p>
 </td></tr>
 <tr valign="top"><td><code>samp.sel</code></td>
 <td>
-<p>a logical/raw vector indicating the selected samples</p>
-</td></tr>
-<tr valign="top"><td><code>variant.sel</code></td>
-<td>
-<p>a logical/raw vector indicating the selected variants</p>
+<p>it is deprecated since v1.11.12, please use
+<code>sample.sel</code> instead</p>
 </td></tr>
 <tr valign="top"><td><code>action</code></td>
 <td>
@@ -63,11 +84,35 @@ set the current filter to the intersection of selected samples
 and/or variants;
 <code>"pop"</code> &ndash; pop up the last filter</p>
 </td></tr>
+<tr valign="top"><td><code>rm.txt</code></td>
+<td>
+<p>a character, the characters will be removed from
+<code>seqnames(variant.sel)</code></p>
+</td></tr>
+<tr valign="top"><td><code>chr</code></td>
+<td>
+<p>a vector of character for chromsome coding</p>
+</td></tr>
+<tr valign="top"><td><code>sample</code></td>
+<td>
+<p>logical, if <code>TRUE</code>, include all samples</p>
+</td></tr>
+<tr valign="top"><td><code>variant</code></td>
+<td>
+<p>logical, if <code>TRUE</code>, include all variants</p>
+</td></tr>
 <tr valign="top"><td><code>verbose</code></td>
 <td>
-<p>if TRUE, show information</p>
+<p>if <code>TRUE</code>, show information</p>
 </td></tr>
 </table>
+
+
+<h3>Details</h3>
+
+<p><code>seqResetFilter(file)</code> is equivalent to <code>seqSetFilter(file)</code>,
+where the selection arguments in <code>seqSetFilter</code> are <code>NULL</code>.
+</p>
 
 
 <h3>Value</h3>
@@ -83,7 +128,7 @@ and/or variants;
 
 <h3>See Also</h3>
 
-<p><code><a href="seqGetFilter.html">seqGetFilter</a></code>, <code><a href="seqSetFilterChrom.html">seqSetFilterChrom</a></code>,
+<p><code><a href="seqSetFilterChrom.html">seqSetFilterChrom</a></code>, <code><a href="seqGetFilter.html">seqGetFilter</a></code>,
 <code><a href="seqGetData.html">seqGetData</a></code>, <code><a href="seqApply.html">seqApply</a></code>
 </p>
 
@@ -113,24 +158,35 @@ head(seqGetData(f, "allele"))
 
 
 # set sample and variant filters
-seqSetFilter(f, sample.id=samp.id[c(2,4,6,8,10)])
+seqSetFilter(f, sample.id=samp.id[c(2,4,6,8)])
 set.seed(100)
-seqSetFilter(f, variant.id=sample(variant.id, 10))
+seqSetFilter(f, variant.id=sample(variant.id, 5))
+
+# get genotypic data
+seqGetData(f, "genotype")
+
+
+## OR
+# set sample and variant filters
+seqSetFilter(f, sample.sel=c(2,4,6,8))
+set.seed(100)
+seqSetFilter(f, variant.sel=sample.int(length(variant.id), 5))
 
 # get genotypic data
 seqGetData(f, "genotype")
 
 
 
-# set the intersection
-seqSetFilter(f)
+## set the intersection
+
+seqResetFilter(f)
 seqSetFilterChrom(f, 10L)
 seqSummary(f, "genotype", check="none")
 
 AF &lt;- seqAlleleFreq(f)
 table(AF &lt;= 0.9)
 
-seqSetFilter(f, variant.sel=AF&lt;=0.9, action="intersect")
+seqSetFilter(f, variant.sel=(AF&lt;=0.9), action="intersect")
 seqSummary(f, "genotype", check="none")
 
 
@@ -138,5 +194,5 @@ seqSummary(f, "genotype", check="none")
 seqClose(f)
 </pre>
 
-<hr /><div style="text-align: center;">[Package <em>SeqArray</em> version 1.9.13 <a href="00Index.html">Index</a>]</div>
+<hr /><div style="text-align: center;">[Package <em>SeqArray</em> version 1.13.0 <a href="00Index.html">Index</a>]</div>
 </body></html>
